Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -404,3 +404,97 @@ The crew gets near the escape vehicle.
 </Accordion>
 
 ### 💥 Crash into the Train and Aftermath
+> Two police cars are seen driving in the opposite direction, passing by the crew.
+
+**Brad:** Cops. Coming our way.
+**Trevor:** Be cool... They ain't made this car yet.
+
+> A police roadblock is seen, blocking the way and forcing the crew to go right.
+
+**Brad:** Shit! Shit! Shit! Road block!
+**Trevor:** Go right! Beat the train, man!
+**Michael:** I.. I got it.
+
+> As the car crossed the railroad, the train hit the rear of the vehicle. The car spins out of control and crashes into a tree.
+
+**Trevor:** Arrgghh! Arrgghh! Jesus!
+**Michael:** You guys alright?
+
+> The car is broken, and the crew is forced to continue on foot.
+
+**Trevor:** Fuck! Come on! Ditch the car, alright? We can go this way to the chopper.
+**Michael:** No, hey! Stick to the plan.
+**Trevor:** What?
+**Michael:** Stick to the fucking plan! Come on.
+
+> The crew approaches the chopper's supposed landing point.
+
+**Brad:** Where the fuck's the chopper? Fuck me, fuck, fuck!
+
+> A sniper is seen cocking his rifle hidden behind a shack.
+
+**Brad:** I'm gonna check around back.
+
+> The sniper hits **Brad**, who falls to the ground. **Trevor** gets to cover.
+
+**Trevor:** Run! It's the fucking Feds! Someone must have fucking talked!
+
+> **Michael** walks towards the wounded **Brad** and examines his wound.
+
+**Michael:** Alright. Brad's gonna be fine, but we gotta get the fuck out of here.
+
+> The sniper hits **Michael**, who falls to the ground as well. The sniper runs away in the background.
+
+**Michael:** Aw, fuck! I'm hit! Ah, Jesus. T, you gotta get out of here.
+**Trevor:** Ain't gonna leave you Mikey!
+**Michael:** Go! God, I'm not gonna make it. Fucking gonna bleed out. Aw, go, go...
+
+> Police cars arrive on the scene. **Trevor** holds his position for a while and shouts at cops in despair.
+
+**Trevor:** Noooo!
+
+<Accordion title="Gunfight Dialogue - random order, Trevor">
+ As **Trevor** engages in a gunfight with the police, he also yells at them in despair. The order of the dialogue is random.
+  
+ **Trevor:** Come on! Come on!
+ **Alternative:** Die, you cocksuckers!
+ **Alternative:** Fucking die, all of you!
+ **Alternative:** Fuck you! Fuck you! Fuck you! Fuck you!
+ **Alternative:** I'm standing here! Finish me!
+ **Alternative:** Kill me, you pricks!
+ **Alternative:** Motherfuckers!
+</Accordion>
+
+### ⚰️ Trevor's Escape, Michael's Funeral
+
+> As more cop cars arrive at the scene, **Trevor** is heavily outnumbered. He escapes. She approaches a woman passing by.
+
+**Trevor:** Hey! You! You, hey!
+**Woman:** Oh, oh, oh God!
+
+> The woman tries to escape but falls into the ground while running. **Trevor** catches her and holds her hostage while three officers arrive. **Trevor** confuses the woman as the pilot.
+
+**Woman:** Oh God. Don't shoot!
+**Trevor:** Where's the chopper?
+**Woman:** Help! Help, please! I don't know what you're talking about!
+**Trevor:** [to the cops] Fucking stay back! You come near me, she's fuckin' dead! Stay back!
+
+> **Trevor** releases his hostage and runs away. The woman runs towards the officers.
+
+**Woman:** Oh, God, help me! Help me! Oh!
+
+> An officer takes the woman in his arms. He raises his hand to direct the remaining officers to pursue Trevor.
+
+**Officer:** [to the cops] Go! Go!
+
+> The two officers pursue **Trevor** as he escapes in the fog. The view then switches to the graveyard, where multiple people, including a preacher, are gathered around **Michael Townley's grave.** A woman is seen crying which is most likely to be <Tooltip tip="Micheal's wife">Amanda Townley</Tooltip>.
+
+**Priest:** **Michael** was not always a good husband. Not always a good citizen. He did not die a hero's death. But he was a man. Our Lord was crucified with two thieves, so perhaps... we should not judge.
+
+**Woman at the funeral:** [sobbing] Michael...
+
+> **Dave Norton** is seen. Credits start appearing on the screen. **Michael** is seen smoking close to the graveyard.
+
+**Priest:** We are born of sin, and we die in sin... and in this, Michael... was like anybody else. Father... we do not know your infinite mysteries. But we know... that you will show mercy to our friend.
+
+> **Michael** tosses his cigarette and walks away. Grand Theft Auto V's wordmark appears on-screen.
