Documentation edits made through Mintlify web editor

--- a/missions/story/franklinandlamar.mdx
+++ b/missions/story/franklinandlamar.mdx
@@ -421,3 +421,29 @@ icon: "cars"
 **Franklin:** What?!
 
 > **Lamar** flips him off as he walks away. **Franklin** turns to his house, and to the door
+
+**Franklin:** Hmph. Motherfucker.
+
+> **Franklin** enters his house, his aunt is in the living room
+
+**Denise:** Woo, honey.
+
+**Denise:** Y'all telling me.
+
+**Denise:** Oh, he here.
+
+**Denise:** We living on top of each other, and it ain't right.
+
+> **Denise** spots **Franklin** enter the living room
+
+**Denise:** Shoo, shoo!
+
+**Denise:** Get on out of here. Okay baby, I'll see you at that thing, you hear?
+
+> **Denise** ends the phone call.
+
+**Denise:** I was on the phone boy, don't be listening!
+
+**Denise:** Goddamn freeloader!
+
+> **Franklin** goes to his bedroom, and the mission ends
