Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -6,19 +6,19 @@ icon: "flag-checkered"
 
 ### ⭐ Introduction - Breaking into Depot
 
-**Brad:** Get down there\!
+<span className="brad">Brad:</span> Get down there\!
 
-**Michael:** Alright, everybody pays attention, no one gets hurt.
+<span className="michael">Michael:</span> Alright, everybody pays attention, no one gets hurt.
 
-> **Trevor** knocks his rifle on a window, with a panicking security guard behind it.
+> <span className="trevor">Trevor</span> knocks his rifle on a window, with a panicking security guard behind it.
 
-**Trevor:** Aarrgh\! Open the door, or they'll get worse than hurt\! Hey, hey, ah\! Come on\!
+<span className="trevor">Trevor:</span> Aarrgh\! Open the door, or they'll get worse than hurt\! Hey, hey, ah\! Come on\!
 
-> The security guard opens the door. **Trevor** kicks the door open.
+> The security guard opens the door. <span className="trevor">Trevor</span> kicks the door open.
 
-**Trevor:** Argh, finally, you prick\!
+<span className="trevor">Trevor:</span> Argh, finally, you prick\!
 
-> **Trevor** hits the security guard with the stock of his rifle.
+> <span className="trevor">Trevor</span> hits the security guard with the stock of his rifle.
 
 **Trevor:** Let's go, shut up\! Shut the fuck up\!\
 **Alternative:** Come on. In the back. Come on. Come on.\
