Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -20,38 +20,38 @@ icon: "flag-checkered"
 
 > <span className="trevor">Trevor</span> hits the security guard with the stock of his rifle.
 
-**Trevor:** Let's go, shut up\! Shut the fuck up\!\
+<span className="trevor">Trevor:</span> Let's go, shut up\! Shut the fuck up\!\
 **Alternative:** Come on. In the back. Come on. Come on.\
 **Alternative:** In the back. Come on. Let's go. Come on.\
 **Alternative:** Get in here and deal with the guard\!
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Michael kills a hostage">
-    If **Michael** kills the hostage whom Brad holds at gunpoint, Brad either laments that he is not the one who killed the civilian or complains about the civilian being killed in general before the mission fails.
+    If <span className="michael">Michael</span> kills the hostage whom Brad holds at gunpoint, <span className="brad">Brad</span> either laments that he is not the one who killed the civilian or complains about the civilian being killed in general before the mission fails.
 
-    **Brad:** Hey\! Prick\! Behave yourself\!\
-    **Alternative:** Hey\! They're collateral\!\
-    **Alternative:** If anyone's killing hostages, it's me.\
-    **Alternative:** No more of that, asshole. Come on.\
-    **Alternative:** So, you're not getting none from that ex-stripper.\
-    **Alternative:** This wasn't meant to get messy\!\
-    **Alternative:** We need'em alive, dick.\
-    **Mission failure: A hostage died.**
+    <span className="brad">Brad:</span> Hey\! Prick\! Behave yourself\!\
+    <span className="alternative">Alternative:</span> Hey\! They're collateral\!\
+    <span className="alternative">Alternative:</span> If anyone's killing hostages, it's me.\
+    <span className="alternative">Alternative:</span> No more of that, asshole. Come on.\
+    <span className="alternative">Alternative:</span> So, you're not getting none from that ex-stripper.\
+    <span className="alternative">Alternative:</span> This wasn't meant to get messy\!\
+    <span className="alternative">Alternative:</span> We need'em alive, dick.\
+    <span className="missionfail">Mission failure: A hostage died.</span>
   </Accordion>
   <Accordion title="Alternative Dialogue - Michael does not enter the room">
-    If **Michael** does not enter the room immediately, Trevor calls out Michael. Brad gets uneasy.
+    If <span className="michael">Michael</span> does not enter the room immediately, <span className="trevor">Trevor</span> calls out <span className="michael">Michael.</span> <span className="brad">Brad</span> gets uneasy.
 
-    **Trevor:** Clear the room.\
-    **Alternative:** Come on through.\
-    **Alternative:** In here. Come on.\
-    **Alternative:** Where the fuck is your head, man?\
-    **Alternative:** You want me to pop this guy?
+    <span className="trevor">Trevor:</span> Clear the room.\
+    <span className="alternative">Alternative:</span> Come on through.\
+    <span className="alternative">Alternative:</span> In here. Come on.\
+    *<span className="alternative">Alternative:</span> Where the fuck is your head, man?\
+    <span className="alternative">Alternative:</span> You want me to pop this guy?
 
-    **Brad:** Come on\! Come on\!\
-    **Alternative:** He's looking at me\!\
-    **Alternative:** Let's get this done\!\
-    **Alternative:** This shouldn't take so long\!\
-    **Alternative:** We're losing time\!
+    <span className="brad">Brad:</span> Come on\! Come on\!\
+    <span className="alternative">Alternative:</span> He's looking at me\!\
+    <span className="alternative">Alternative:</span> Let's get this done\!\
+    <span className="alternative">Alternative:</span> This shouldn't take so long\!\
+    <span className="alternative">Alternative:</span> We're losing time\!
   </Accordion>
 </AccordionGroup>
 
