Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -21,9 +21,9 @@ icon: "flag-checkered"
 > <span className="trevor">Trevor</span> hits the security guard with the stock of his rifle.
 
 <span className="trevor">Trevor:</span> Let's go, shut up\! Shut the fuck up\!\
-**Alternative:** Come on. In the back. Come on. Come on.\
-**Alternative:** In the back. Come on. Let's go. Come on.\
-**Alternative:** Get in here and deal with the guard\!
+<span className="alternative">Alternative:</span> Come on. In the back. Come on. Come on.\
+<span className="alternative">Alternative:</span> In the back. Come on. Let's go. Come on.\
+<span className="alternative">Alternative:</span> Get in here and deal with the guard\!
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Michael kills a hostage">
@@ -57,73 +57,74 @@ icon: "flag-checkered"
 
 ### 🔫 Taking Hostages
 
-> **Michael** enters the room where the guard and two other hostages are.
+> <span className="michael">Michael</span> enters the room where the guard and two other hostages are.
 
-**Michael:** Hands behind your back.
+<span className="michael">Michael:</span> Hands behind your back.
 
-> **Michael** starts handcuffing the security guard.
+> <span className="michael">Michael</span> starts handcuffing the security guard.
 
-**Security Guard:** C'mon mister, we're giving you everything you want.
+<span className="npc">Security Guard:</span> C'mon mister, we're giving you everything you want.
 
-> One of the two hostages tries to ring the alarm but sees that **Michael** holds him at gunpoint and raises his hands.
+> One of the two hostages tries to ring the alarm but sees that <span className="michael">Michael</span> holds him at gunpoint and raises his hands.
 
-**Michael:** Don't even think about it.
+<span className="michael">Michael:</span> Don't even think about it.
 
-> **Michael** kicks the security guard towards the other hostages.
+> <span className="michael">Michael</span> kicks the security guard towards the other hostages.
 
-**Woman:** I'll do it. I'll do it... Oh God.
+<span className="npc">Woman:</span> I'll do it. I'll do it... Oh God.
 
-> **Brad** pushes the hostage, who was thrown and held at gunpoint before, into the room, as he yells at her.
+> <span className="brad">Brad</span> pushes the hostage, who was thrown and held at gunpoint before, into the room, as he yells at her.
 
-**Brad:** Get in there\!
+<span className="brad">Brad:</span> Get in there\!
 
-> **Trevor** proceeds to plant explosives on the vault door.
+> <span className="trevor">Trevor</span> proceeds to plant explosives on the vault door.
 
-**Trevor:** Sit tight. I'll handle the plastic.\
-**Brad:** Don't blow yourself up\!
+<span className="trevor">Trevor:</span> Sit tight. I'll handle the plastic.\
+
+<span className="brad">Brad:</span> Don't blow yourself up\!
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Michael pointing the gun at hostages">
-    **Michael** aims his weapon and yells at the hostages and crew members.
+    <span className="michael">Michael</span> aims his weapon and yells at the hostages and crew members.
 
-    **Michael:** Come on, let's go\!\
-    **Alternative:** Hurry\!\
-    **Alternative:** Listen up\!\
-    **Alternative:** Pay attention.\
-    **Alternative:** You\!\
-    **Michael** aims at the hostages and makes them move to the back room.
+    <span className="michael">Michael:</span> Come on, let's go\!\
+    <span className="alternative">Alternative:</span> Hurry\!\
+    <span className="alternative">Alternative:</span> Listen up\!\
+    <span className="alternative">Alternative:</span> Pay attention.\
+    <span className="alternative">Alternative:</span> You\!\
+    <span className="michael">Michael</span> aims at the hostages and makes them move to the back room.
   </Accordion>
   <Accordion title="Alternative Dialogue - Michael standing still">
-    If **Michael** stands still, **Brad** calls out **Michael**. If Trevor comes back meanwhile, he will complain.
+    If <span className="michael">Michael</span> stands still, <span className="Brad">Brad</span> calls out <span className="michael">Michael</span>. If <span className="trevor">Trevor</span> comes back meanwhile, he will complain.
 
-    **Brad:** M\! Get these assholes in the closet\!\
-    **Brad:** I said the closet\! Get 'em in there\! Come on\!\
-    **Trevor:** What is the problem? Why are they still out here? You were meant to lock 'em down.\
-    After **Trevor** complains, **Brad** aims at the hostages and makes them move to the back room.
+    <span className="brad">Brad:</span> M\! Get these assholes in the closet\!\
+    <span className="brad">Brad:</span> I said the closet\! Get 'em in there\! Come on\!\
+    <span className="trevor">Trevor:</span> What is the problem? Why are they still out here? You were meant to lock 'em down.\
+    After <span className="trevor">Trevor</span> complains, <span className="brad">Brad</span> aims at the hostages and makes them move to the back room.
   </Accordion>
   <Accordion title="Alternative Dialogue - Michael killing a hostage">
-    If **Michael** kills a hostage in the room, Brad complains before mission failure.
+    If <span className="michael">Michael</span> kills a hostage in the room, <span className="brad">Brad</span> complains before mission failure.
 
-    **Brad:** We need'em alive, dick\!\
-    **Mission failure: A hostage died.**
+    <span className="brad">Brad:</span> We need'em alive, dick\!\
+    <span className="missionfail">Mission failure: A hostage died.</span>
   </Accordion>
 </AccordionGroup>
 
 ### 🏃‍♂️‍➡️ Moving Hostages
 
-**Brad:** In the back\! Come on\!
+<span className="brad">Brad:</span> In the back\! Come on\!
 
 > The hostages get upset, and agitated.
 
-**Male Employee:** What's he doing? He's going to kill us in here.
+<span className="npc">Male Employee:</span> What's he doing? He's going to kill us in here.
 
-**Male Employee:** Leave us alone.
+<span className="npc">Male Employee:</span> Leave us alone.
 
-**Second Male Employee:** We didn't do shit to you
+<span className="npc">Second Male Employee:</span> We didn't do shit to you
 
-> Either **Trevor** re-enters the room after the hostages enter the back room or re-enters and waits until they get in. In either case, **Brad** locks the door after all hostages enter the back room.
+> Either <span className="trevor">Trevor</span> re-enters the room after the hostages enter the back room or re-enters and waits until they get in. In either case, <span className="brad">Brad</span> locks the door after all hostages enter the back room.
 
-**Trevor:** All set. Phone it in.
+<span className="trevor">Trevor:</span> All set. Phone it in.
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Michael calls immediately">
