Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -128,65 +128,65 @@ icon: "flag-checkered"
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Michael calls immediately">
-    If **Michael** uses his phone to detonate the bomb immediately, he informs the crew.
+    If <span className="michael">Michael</span> uses his phone to detonate the bomb immediately, he informs the crew.
 
-    **Michael:** I'm calling it.\
-    **Alternative:** I'm making the call.
+    <span className="michael">Michael:</span> I'm calling it.\
+    <span className="alternative">Alternative:</span> I'm making the call.
   </Accordion>
   <Accordion title="Alternative Dialogue - Michael doesn't call immediately">
-    If **Michael** does not phone immediately, **Brad** and **Trevor** call out **Michael**. The order of the dialogue is random.
+    If <span className="michael">Michael</span> does not phone immediately, <span className="brad">Brad</span> and <span className="trevor">Trevor</span> call out <span className="michael">Michael</span>. The order of the dialogue is random.
 
-    **Brad:** Blow the door\!\
-    **Brad:** C'mon\! C'mon\!\
-    **Brad:** We gonna do this?\!\
-    **Trevor:** Blow the fucking door\!\
-    **Trevor:** Call already.\
-    **Trevor:** Come on. Call it in\!\
-    **Trevor:** Detonate\!\
-    **Trevor:** Get your cell out and dial.\
-    **Trevor:** We ain't got time for this crap\!
+    <span className="brad">Brad:</span> Blow the door\!\
+    <span className="brad">Brad:</span> C'mon\! C'mon\!\
+    <span className="brad">Brad:</span> We gonna do this?\!\
+    <span className="trevor">Trevor:</span> Blow the fucking door\!\
+    <span className="trevor">Trevor:</span> Call already.\
+    <span className="trevor">Trevor:</span> Come on. Call it in\!\
+    <span className="trevor">Trevor:</span> Detonate\!\
+    <span className="trevor">Trevor:</span> Get your cell out and dial.\
+    <span className="trevor">Trevor:</span> We ain't got time for this crap\!
   </Accordion>
 </AccordionGroup>
 
 ### 💰 Stealing Money
 
-> **Michael** enters the vault.
+> <span className="michael">Michael</span> enters the vault.
 
-**Trevor:** Oh, there it is.\
-**Alternative:** That's the score.\
-**Alternative:** We're just taking the non-sequential notes.
+<span className="trevor">Trevor:</span> Oh, there it is.\
+<span className="alternative">Alternative:</span> That's the score.\
+<span className="alternative">Alternative:</span> We're just taking the non-sequential notes.
 
-> **Michael** and **Trevor** start collecting the money.
+> <span className="michael">Michael</span> and <span className="trevor">Trevor</span> start collecting the money.
 
-**Trevor:** Oh... there's enough here for us all to enjoy\!
+<span className="trevor">Trevor:</span> Oh... there's enough here for us all to enjoy\!
 
-**Michael:** Depends on how you look at it.
+<span className="michael">Michael:</span> Depends on how you look at it.
 
-> **Michael** finishes collecting the money. **Trevor** is standing at the entrance of the vault.
+> <span className="michael">Michael</span> finishes collecting the money. <span className="trevor">Trevor</span> is standing at the entrance of the vault.
 
-**Trevor:** We gotta move.\
-**Alternative:** We're done here, let's go.
+<span className="trevor">Trevor:</span> We gotta move.\
+<span className="alternative">Alternative:</span> We're done here, let's go.
 
 <Accordion title="Alternative Dialogue - Michael not leaving vault">
-  If **Michael** does not leave the vault immediately, Trevor calls him.
+  If <span className="michael">Michael</span> does not leave the vault immediately, <span className="trevor">Trevor:</span> calls him.
 
-  **Trevor:** We gotta move.\
-  **Alternative:** What's the hold up?
+  <span className="trevor">Trevor:</span> We gotta move.\
+  <span className="alternative">Alternative:</span> What's the hold up?
 </Accordion>
 
 ### 🧍‍♂️ Jaspers' Last Stand
 
-> **Michael** and **Trevor** leave the vault.
+> <span className="michael">Michael</span> and <span className="trevor">Trevor</span> leave the vault.
 
-**Trevor:** Coming out, B.
+<span className="michael">Michael:</span> Coming out, B.
 
-> Both exit the vault. As **Michael** walks out, a security guard hidden behind the wall grabs **Michael** from behind, takes his balaclava off, and holds him at gunpoint.
+> Both exit the vault. As <span className="michael">Michael</span> walks out, a security guard hidden behind the wall grabs <span className="michael">Michael</span> from behind, takes his balaclava off, and holds him at gunpoint.
 
 **Jaspers:** Give it up\! I got him\! I saw your face. I'll remember you.
 
-> **Trevor** is seen aiming at the guard.
+> <span className="trevor">Trevor</span> is seen aiming at the guard.
 
-**Michael:** You forget a thousand things every day. How 'bout you make sure this is one of 'em?
+<span className="michael">Michael:</span> You forget a thousand things every day. How 'bout you make sure this is one of 'em?
 
 > **Jaspers** panicks.
 
@@ -194,59 +194,59 @@ icon: "flag-checkered"
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Trevor waiting">
-    If **Trevor** does not shoot immediately, **Michael** tries to convince **Jaspers** to drop the gun. **Trevor** doubles down.
+    If <span className="trevor">Trevor</span> does not shoot immediately, **Michael** tries to convince **Jaspers** to drop the gun. <span className="trevor">Trevor</span> doubles down.
 
-    **Michael:** No one's crazy. Alright, think. Be cool.\
-    **Trevor:** That's right, pal. I'm fucking crazy.\
+    <span className="michael">Michael:</span> No one's crazy. Alright, think. Be cool.\
+    <span className="trevor">Trevor:</span> That's right, pal. I'm fucking crazy.\
     **Jaspers:** Oh, boy\!\
-    **Michael:** Alright, look, you wanna live? Tell me you wanna live. Work this out.\
+    <span className="michael">Michael:</span> Alright, look, you wanna live? Tell me you wanna live. Work this out.\
     **Jaspers:** For sure I want to live\! Tell him to put the gun down.\
-    **Trevor:** Ain't gonna happen, pal. Make a move. I got all day.\
-    **Trevor:** It looks like the cavalry ain't gonna show, pal\!
+    <span className="trevor">Trevor:</span> Ain't gonna happen, pal. Make a move. I got all day.\
+    <span className="trevor">Trevor:</span> It looks like the cavalry ain't gonna show, pal\!
 
-    > The view switches to Trevor, who is determined to shoot the guard.
+    > The view switches to <span className="trevor">Trevor</span>, who is determined to shoot the guard.
 
-    **Trevor:** I'll try to make this painless.
+    <span className="trevor">Trevor:</span> I'll try to make this painless.
   </Accordion>
   <Accordion title="Trevor missing">
-    If **Trevor** misses the headshot, **Jasper** kills **Michael**, resulting in the mission failure.\
-    **Mission failure: M. died.**
+    If <span className="trevor">Trevor</span> misses the headshot, **Jasper** kills <span className="michael">Michael</span>, resulting in the mission failure.\
+    <span className="missionfail">Mission failure: M. died.</span>
   </Accordion>
 </AccordionGroup>
 
 ### 🏃‍♂️‍➡️ Crew Moving towards Garage
 
-> **Trevor** shoots the guard in the head.
+> <span className="trevor">Trevor</span> shoots the guard in the head.
 
-**Michael:** Fuck\! You didn't have to do that\!
+<span className="michael">Michael:</span> Fuck\! You didn't have to do that\!
 
-**Trevor:** Let's get going. There'll be time for grieving later.
+<span className="trevor">Trevor:</span> Let's get going. There'll be time for grieving later.
 
-**Michael:** Yeah, you got that right.
+<span className="michael">Michael:</span> Yeah, you got that right.
 
 > The crew walk towards the door leading into the garage.
 
-**Brad:** Come on\!\
-**Alternative:** Let's go.
+<span className="brad">Brad:</span> Come on\!\
+<span className="alternative">Alternative:</span> Let's go.
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Michael moves slowly">
-    **Brad** and **Trevor** complain about Michael moving slowly.
+    <span className="brad">Brad</span> and <span className="trevor">Trevor</span> complain about Michael moving slowly.
 
-    **Brad:** Move.\
-    **Trevor:** Come on\!\
-    **Alternative:** Move\!
+    <span className="brad">Brad:</span> Move.\
+    <span className="trevor">Trevor:</span> Come on\!\
+    <span className="alternative">Alternative:</span> Move\!
   </Accordion>
   <Accordion title="Alternative Dialogue - Trevor does not take cover">
-    **Brad** and **Michael** complain if **Trevor** does not take cover immediately. The order of the dialogue is random.
+    <span className="brad">Brad</span> and <span className="michael">Michael</span> complain if <span className="trevor">Trevor</span> does not take cover immediately. The order of the dialogue is random.
 
-    **Brad:** Get your fucking head down, the doors are about to blow\!\
-    **Alternative:** I'm ready to do this. Now, get in cover\!\
-    **Alternative:** What are you doing? Find some cover\!
+    <span className="brad">Brad:</span> Get your fucking head down, the doors are about to blow\!\
+    <span className="alternative">Alternative:</span> I'm ready to do this. Now, get in cover\!\
+    <span className="alternative">Alternative:</span> What are you doing? Find some cover\!
 
-    **Michael:** Get in cover, T.\
-    **Alternative:** Quit fucking around and get down\!\
-    **Alternative:** Wait until T's in cover, then set the charge.
+    <span className="michael">Michael:</span> Get in cover, T.\
+    <span className="alternative">Alternative:</span> Quit fucking around and get down\!\
+    <span className="alternative">Alternative:</span> Wait until T's in cover, then set the charge.
   </Accordion>
 </AccordionGroup>
 
