Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -44,7 +44,7 @@ icon: "flag-checkered"
     <span className="trevor">Trevor:</span> Clear the room.\
     <span className="alternative">Alternative:</span> Come on through.\
     <span className="alternative">Alternative:</span> In here. Come on.\
-    *<span className="alternative">Alternative:</span> Where the fuck is your head, man?\
+    <span className="alternative">Alternative:</span> Where the fuck is your head, man?\
     <span className="alternative">Alternative:</span> You want me to pop this guy?
 
     <span className="brad">Brad:</span> Come on\! Come on\!\
@@ -430,11 +430,17 @@ icon: "flag-checkered"
   If <span className="michael">Michael</span> drives slowly, an alternative dialogue will occur. <span className="brad">Brad</span> gets uneasy. **Michael** tries to calm him down.
 
   <span className="trevor">Trevor:</span> Mike.
+  
   <span className="michael">Michael:</span> I say there's a chopper, there's a chopper. We stick to the plan, we're home free.
+  
   <span className="brad">Brad:</span> Alright\! Yeah\! Fuck 'em, man\! Fuck 'em\!
+  
   <span className="trevor">Trevor:</span> Whoo. Hahahaha.
+  
   <span className="brad">Brad:</span> Man, I thought this score was supposed to be an easy take? It's all gone crazy.
+  
   <span className="michael">Michael:</span> Yeah. I hear you. We gotta follow the plan - everything'll work out.
+  
   <span className="brad">Brad:</span> Pair of neurotic idiots.
 </Accordion>
 
