Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -427,20 +427,14 @@ icon: "flag-checkered"
 <span className="brad">Brad:</span> Man, I'll believe in this bird when I get eyes on it.
 
 <Accordion title="Alternative Dialogue - Michael driving slowly">
-  If <span className="michael">Michael</span> drives slowly, an alternative dialogue will occur. <span className="brad">Brad</span> gets uneasy. **Michael** tries to calm him down.
+  If <span className="michael">Michael</span> drives slowly, an alternative dialogue will occur. <span className="brad">Brad</span> gets uneasy. <span className="michael">Michael</span> tries to calm him down.
 
   <span className="trevor">Trevor:</span> Mike.
-  
   <span className="michael">Michael:</span> I say there's a chopper, there's a chopper. We stick to the plan, we're home free.
-  
   <span className="brad">Brad:</span> Alright\! Yeah\! Fuck 'em, man\! Fuck 'em\!
-  
   <span className="trevor">Trevor:</span> Whoo. Hahahaha.
-  
   <span className="brad">Brad:</span> Man, I thought this score was supposed to be an easy take? It's all gone crazy.
-  
   <span className="michael">Michael:</span> Yeah. I hear you. We gotta follow the plan - everything'll work out.
-  
   <span className="brad">Brad:</span> Pair of neurotic idiots.
 </Accordion>
 
