Documentation edits made through Mintlify web editor

--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -536,7 +536,7 @@ icon: "flag-checkered"
 
 **Officer:** [to the cops] Go\! Go\!
 
-> The two officers pursue **Trevor** as he escapes in the fog. The view then switches to the graveyard, where multiple people, including a preacher, are gathered around **Michael Townley's grave.** A woman is seen crying which is most likely to be <Tooltip tip="Micheal's wife">Amanda Townley</Tooltip>.
+> The two officers pursue <span className="trevor">Trevor</span> as he escapes in the fog. The view then switches to the graveyard, where multiple people, including a preacher, are gathered around <span className="michael">Micheal Townley's grave.</span> A woman is seen crying which is most likely to be <span className="amanda">Amanda Townley</span>.
 
 **Priest:** **Michael** was not always a good husband. Not always a good citizen. He did not die a hero's death. But he was a man. Our Lord was crucified with two thieves, so perhaps... we should not judge.
 
